product-categories relation update
